feat:envoy safe commit - hardware recovery failure
